<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/third_edit_cotacao"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/drawable_botoes"
        android:elevation="2.5dp"
        android:ems="10"
        android:enabled="false"
        android:gravity="center"
        android:hint="@string/third_hint_cotacao"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/third_edit_valor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_spinner_coin" />


    <EditText
        android:id="@+id/third_edit_valor"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/drawable_botoes"
        android:elevation="2.5dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/third_hint_valor"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/third_edit_cotacao"
        app:layout_constraintTop_toBottomOf="@+id/first_spinner_coin" />

    <Button
        android:id="@+id/third_btn_calcular"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/blueGray100"
        android:elevation="@dimen/com_facebook_likeboxcountview_border_radius"
        android:text="@string/third_btn"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_view_valor"
        app:layout_constraintVertical_bias="0.052"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/third_view_cotacao"
        android:layout_width="118dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/third_view_cotacao"
        app:layout_constraintEnd_toStartOf="@+id/third_view_valor"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_edit_cotacao" />

    <TextView
        android:id="@+id/third_view_answer"
        android:layout_width="0dp"
        android:layout_height="83dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/drawable_botoes"
        android:elevation="2.5dp"
        android:gravity="center"
        android:hint="CriptoCon"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/third_view_valor"
        android:layout_width="119dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/third_view_valor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/third_view_cotacao"
        app:layout_constraintTop_toBottomOf="@+id/third_edit_valor" />

    <primao.levandowski.searchcriptocon.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/first_spinner_coin"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />


</android.support.constraint.ConstraintLayout>