<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/four_view_head"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/four_head_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/four_card_one"
        android:layout_width="372dp"
        android:layout_height="171dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four_view_head">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/four_image_card_one"
                android:layout_width="76dp"
                android:layout_height="63dp"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="false"
                android:scaleType="fitCenter"
                android:src="@drawable/walltime"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/four_view_card_one"
                app:layout_constraintHorizontal_bias="0.21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.223" />

            <Button
                android:id="@+id/four_btn_card_one"
                android:layout_width="182dp"
                android:layout_height="32dp"
                android:layout_gravity="bottom"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/gray600"
                android:gravity="center"
                android:text="@string/four_btn_card_one"
                android:textColor="@color/gray20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.62"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/four_view_card_one"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/four_view_card_one"
                android:layout_width="224dp"
                android:layout_height="93dp"
                android:layout_below="@+id/for_view_head_card_one"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="8dp"
                android:maxLines="5"
                android:text="@string/four_view_card_one"
                android:textColor="#666"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/four_view_head_card_one" />

            <TextView
                android:id="@+id/four_view_head_card_one"
                android:layout_width="115dp"
                android:layout_height="26dp"
                android:layout_below="@+id/img_git"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:maxLines="5"
                android:text="@string/four_head_view_card_one"
                android:textColor="#222"
                android:textSize="22dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.589"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/four_card_two"
        android:layout_width="372dp"
        android:layout_height="178dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/four_image_card_two"
                android:layout_width="76dp"
                android:layout_height="63dp"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="false"
                android:scaleType="fitCenter"
                android:src="@drawable/binancecoin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/four_view_card_one"
                app:layout_constraintHorizontal_bias="0.21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.223" />

            <Button
                android:id="@+id/four_btn_card_two"
                android:layout_width="182dp"
                android:layout_height="33dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="10dp"
                android:background="@color/gray600"
                android:gravity="center"
                android:text="@string/four_btn_card_two"
                android:textColor="@color/gray20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.61"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/four_view_card_two"
                android:layout_width="242dp"
                android:layout_height="93dp"
                android:layout_below="@+id/four_view_head_card_one"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="36dp"
                android:layout_marginTop="196dp"
                android:maxLines="5"
                android:text="@string/four_view_card_two"
                android:textColor="#666"
                android:textSize="14dp"
                app:layout_constraintBottom_toTopOf="@+id/four_btn_card_two"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/four_view_head_card_one" />

            <TextView
                android:id="@+id/four_view_head_card_two"
                android:layout_width="115dp"
                android:layout_height="26dp"
                android:layout_below="@+id/img_git"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:maxLines="5"
                android:text="@string/four_head_view_card_two"
                android:textColor="#222"
                android:textSize="22dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.589"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/four_view_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/four_bottom_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four_card_one"
        app:layout_constraintVertical_bias="0.843" />
</android.support.constraint.ConstraintLayout>